Revert "fixed vAlign=top (#1095)"
This reverts commit 8d47b0cb43fb86841dd5b726031d54f9aea12c94.

--- a/src/RadioGroup/RadioGroup.scss
+++ b/src/RadioGroup/RadioGroup.scss
@@ -172,9 +172,3 @@ button.radioButton {
     flex-direction: row-reverse;
   }
 }
-
-.radio-button-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
